--- a/To-Do list/index.html
+++ b/To-Do list/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 <header>
-    <h1>Ananya's To-Do list</h1>
+    <h1>TO-DO list App</h1>
 </header>
 <form>
     <input type="text" class="todo-input">
@@ -35,15 +35,7 @@
 </form>
 <div class="todo-container">
     <ul class="todo-list"></ul>
-        <!--<div class="todo"> --todoDiv
-            <li></li> --newTodo
-            <button>Deleted</button> --trashButton
-            <button>Checked</button> --completedButton
-        </div>-->
-    
-    
 </div>
-  
     <script src="app.js"></script>
 </body>
 </html>
